# gork-build

./: CONTRIBUTING.md  LICENSE  NOTICE  PRIVACY.md  README.md
.cargo/: audit.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  gork-privacy.yml  patch-roundtrip.yml  upstream-replay.yml  upstream-watch.yml
crates/codegen/xai-chat-state/: Cargo.toml
crates/codegen/xai-file-utils/: Cargo.toml
crates/codegen/xai-grok-auth/: Cargo.toml
crates/codegen/xai-grok-config-types/src/: lib.rs
crates/codegen/xai-grok-markdown/: Cargo.toml
crates/codegen/xai-grok-mcp/: Cargo.toml
crates/codegen/xai-grok-pager/: Cargo.toml  README.md
crates/codegen/xai-grok-pager-bin/: Cargo.toml
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager-minimal/: Cargo.toml
crates/codegen/xai-grok-pager-pty-harness/: Cargo.toml
crates/codegen/xai-grok-pager-pty-harness/src/: flows.rs  lib.rs  pty.rs
crates/codegen/xai-grok-pager-render/src/: glyphs.rs
crates/codegen/xai-grok-pager-render/src/appearance/: cache.rs  config.rs
crates/codegen/xai-grok-pager/docs/user-guide/: 01-getting-started.md  02-authentication.md  04-slash-commands.md  05-configuration.md  11-custom-models.md  15-agent-mode.md  18-sandbox.md  24-monitoring-usage.md  README.md
crates/codegen/xai-grok-pager/npm/grok/: README.md  package.json
crates/codegen/xai-grok-pager/npm/grok-darwin-arm64/: README.md  package.json
crates/codegen/xai-grok-pager/npm/grok-darwin-x64/: README.md  package.json
crates/codegen/xai-grok-pager/npm/grok-linux-arm64/: README.md  package.json
crates/codegen/xai-grok-pager/npm/grok-linux-x64/: README.md  package.json
crates/codegen/xai-grok-pager/npm/grok-win32-arm64/: README.md  package.json
crates/codegen/xai-grok-pager/npm/grok-win32-x64/: README.md  package.json
crates/codegen/xai-grok-pager/src/: completions_cmd.rs  diagnostics.rs  diff.rs  headless.rs  lib.rs  mcp_cmd.rs  memory_trace.rs  models.rs  plugin_cmd.rs  pty_wrap.rs  trace_cmd.rs  wrap_clipboard_image.rs  wrap_cmd.rs  wrap_cmd_tests.rs
crates/codegen/xai-grok-pager/src/acp/: tracker.rs
crates/codegen/xai-grok-pager/src/app/: actions.rs  app_view.rs  cli.rs  event_loop.rs  inline_edit.rs  mod.rs  screen_mode_relaunch.rs
crates/codegen/xai-grok-pager/src/notifications/: mod.rs  title.rs
crates/codegen/xai-grok-pager/src/settings/: defs.rs  mod.rs  registry.rs
crates/codegen/xai-grok-pager/src/slash/: command.rs
crates/codegen/xai-grok-pager/src/views/: agent.rs  jump.rs  mod.rs  overlay_list.rs  rewind.rs  settings_modal.rs  timeline.rs
crates/codegen/xai-grok-pager/tests/: pty_e2e_clipboard.rs  pty_e2e_config_ui.rs  pty_e2e_minimal.rs  pty_e2e_persistence.rs  pty_e2e_queue.rs  pty_e2e_scroll_selection.rs  pty_e2e_shell_tools.rs  pty_e2e_smoke.rs  settings_e2e.rs
crates/codegen/xai-grok-pager/tests/pty_e2e/: auto_wake_cancel_preserves_queued_user_prompt.rs  background_task_reaped_on_quit.rs  basename_path_demo_pty.rs  bash_full_output_double_click_fold_pty.rs  campaign_remote_settings_nudge_and_dismiss.rs  cancel_then_resend_prompt_appears_once.rs  common.rs  critical_announcement_session_banner_pty.rs  drag_autoscroll_no_bounce_pty.rs  drag_enters_content_from_gap_pty.rs  drag_from_above_prompt_strip_pty.rs  drag_from_chrome_stays_block_pty.rs  drag_over_gap_rows_does_not_freeze_head_pty.rs  drag_select_autoscroll_full_scrollout_copy_pty.rs  drag_select_wheel_scroll_extends_pty.rs  edit_collapsed_oneliner_pty.rs  edit_hl_inplace_refresh_pty.rs  edit_merge_parallel_pty.rs  edit_merge_sequential_pty.rs  endline_park_two_static_markers.rs  (+33 more)
crates/codegen/xai-grok-sampler/: Cargo.toml
crates/codegen/xai-grok-sampling-types/: Cargo.toml
crates/codegen/xai-grok-sandbox/src/: lib.rs  profiles.rs
crates/codegen/xai-grok-shared/src/: ui_config.rs
crates/codegen/xai-grok-shell/: README.md
crates/codegen/xai-grok-shell/benches/: session_list.rs
crates/codegen/xai-grok-shell/src/: cli_models.rs  managed_config.rs  mcp_doctor.rs  plugin.rs
crates/codegen/xai-grok-shell/tests/: privacy_resolvers.rs
crates/codegen/xai-grok-telemetry/: Cargo.toml
crates/codegen/xai-grok-telemetry/src/: client.rs  config.rs  sentry.rs
crates/codegen/xai-grok-update/: Cargo.toml
crates/codegen/xai-grok-update/src/: auto_update.rs  minimum_version.rs  version.rs
crates/codegen/xai-grok-update/tests/: test_blitz_cancel.rs  test_check_status_regression.rs  test_concurrent_convergence.rs  test_downgrade_matrix.rs  test_install_internal.rs  test_subprocess.rs
crates/codegen/xai-grok-update/tests/common/: mod.rs
crates/codegen/xai-grok-version/: Cargo.toml
crates/codegen/xai-grok-version/src/: lib.rs
crates/codegen/xai-grok-workspace-types/: Cargo.toml
crates/codegen/xai-grok-workspace/src/: handle.rs  hub_server.rs
crates/codegen/xai-mixpanel/src/: lib.rs
crates/codegen/xai-ratatui-inline/: Cargo.toml
crates/common/xai-computer-hub-core/: Cargo.toml
crates/common/xai-computer-hub-mcp-adapter/: Cargo.toml
crates/common/xai-computer-hub-sdk/: Cargo.toml
crates/common/xai-tool-protocol/: Cargo.toml
crates/common/xai-tool-runtime/: Cargo.toml
crates/common/xai-tool-types/: Cargo.toml
maint/: README.md  control-files.toml  last-apply-status.json  lock-policy.toml  patchset.toml  sensitive-paths.txt  upstream.lock.toml
maint/contracts/: network-denylist.txt  privacy-contract.toml
maint/overlays/: CONTRIBUTING.md  SECURITY.md
maint/patches/: 0001-privacy-core.patch  0010-telemetry-hard-off.patch  0020-research-upload-hard-off.patch  0030-retention-opt-out.patch  0040-vendor-updater-hard-off.patch  0050-privacy-contract-tests.patch  0060-egress-guard.patch  0070-supply-chain-policy.patch  0080-product-identity.patch  0081-package-publishing.patch  0082-branding-docs.patch  SHA256SUMS  series
maint/scripts/: check_installer_chokepoint.sh  patchctl.py  upstream_diff_report.py  verify_privacy_contract.py
scripts/: privacy_egress_check.sh  privacy_egress_proxy.py
(+114 files in other folders)
