[package]
license = "Apache-2.0"
name = "xai-grok-auth"
version = "0.1.0"
edition.workspace = true
description = "Auth dependency-inversion seam: HttpAuth + AuthCredentialProvider traits"
authors = ["Gork Build contributors"]

[features]
middleware = ["dep:reqwest-middleware", "dep:http"]

[dependencies]
async-trait = { workspace = true }
http = { workspace = true, optional = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
reqwest-middleware = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
