[package]
license = "Apache-2.0"
name = "xai-grok-markdown"
version = "0.1.0"
edition.workspace = true
authors = ["Gork Build contributors"]
description = "Streaming markdown renderer for terminal UIs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[dependencies]
anstyle = { workspace = true }
anstyle-lossy = { workspace = true }
anstyle-syntect = { workspace = true }
html-escape = { workspace = true }
linkify = { workspace = true }
pulldown-cmark = { workspace = true }
ratatui = { workspace = true }
supports-color = { workspace = true }
syntect = { workspace = true }
two-face = { workspace = true }
textwrap = { workspace = true }
unicode-width = { workspace = true }
url = { workspace = true }
xai-grok-markdown-core = { workspace = true }

[dependencies.crossterm]
workspace = true
features = ["event-stream", "bracketed-paste"]
optional = true

[dependencies.xai-ratatui-textarea]
workspace = true
optional = true

[dev-dependencies]
criterion = { workspace = true }
pretty_assertions = { workspace = true }

[[bin]]
name = "md-table-test"
path = "bin/md_table_test.rs"
required-features = ["playground"]

[[bin]]
name = "md-mermaid-test"
path = "bin/md_mermaid_test.rs"
required-features = ["playground"]

[features]
default = []
playground = ["dep:crossterm", "dep:xai-ratatui-textarea"]

[[bench]]
name = "bench"
harness = false
