[package]
license = "Apache-2.0"
name = "xai-grok-sampler"
version = "0.1.0"
edition.workspace = true
description = "Actor-based sampling/inference layer for the Gork Build sampling stack (HTTP streaming + retry, no shell coupling)"

[dependencies]
# Internal
xai-grok-sampling-types = { path = "../xai-grok-sampling-types" }
xai-grok-version = { workspace = true }

# External
async-openai = { workspace = true }
async-stream = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
eventsource-stream = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time", "sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
# Mock HTTP server for actor / request_task integration tests.
axum = { workspace = true }
# Shared SSE generators for the happy-path mock payloads.
xai-grok-test-support = { workspace = true }
# `start_paused = true` for deterministic timeout testing; `net` for
# `TcpListener::bind` in the mock server harness.
tokio = { workspace = true, features = [
    "rt",
    "macros",
    "time",
    "sync",
    "test-util",
    "net",
    "rt-multi-thread",
] }

[lints]
workspace = true
