[package]
name = "xai-ratatui-inline"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
authors = ["Gork Build contributors"]

[dependencies]
# ANSI escape parsing for the line splitter (production). Same VTE-style
# state machine family as the prior termwiz-based parser; already present in
# the shipped dependency tree via anstream/clap.
anstyle-parse = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
ansi-width = { workspace = true }
anyhow = { workspace = true }
colored_json = { workspace = true }
criterion = { workspace = true }
lipsum = { workspace = true }
serde_json = { workspace = true }
# Dev-only reference implementation for tests/segment_differential.rs.
# Not linked into shipped binaries.
termwiz = { workspace = true }

[[bench]]
name = "bench"
harness = false

[features]
scrolling-regions = [
    "ratatui/scrolling-regions",
] # required for terminal fork only
