[package]
license = "Apache-2.0"
name = "xai-computer-hub-core"
version = "0.1.0"
edition.workspace = true
description = "Transport, ToolRegistry, and resolver abstractions for the Computer Hub"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
xai-tool-protocol = { workspace = true }
xai-tool-runtime = { workspace = true }
xai-tool-types = { workspace = true }

[dev-dependencies]
dashmap = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util", "sync"] }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
